<resources>
    <string name="app_name">Univcomm</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign in</string>
    <string name="continue_login">Continue</string>
    <string name="univcomm">Univcomm</string>
    <string name="welcome_message">Welcome to the college community!</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="sign_up">Sign up</string>
    <string name="select_to_login_or_logout">Select to login or logout</string>
    <string name="or">or</string>
    <string name="join_now">Join now</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>