<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".user.LoginFragment">

    <ImageView
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/univcomm"
        android:src="@drawable/logo" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <Space
                android:layout_width="match_parent"
                android:layout_height="32dp" />


            <TextView
                android:id="@+id/signInTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sign_in"
                android:textSize="40sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTextField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="32dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTextField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>


            <Space
                android:layout_width="match_parent"
                android:layout_height="32dp" />

            <Button
                android:id="@+id/forgotPasswordButton"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textAllCaps="false"
                android:textColor="@color/default_color"
                android:textSize="16sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="32dp" />

            <Button
                android:id="@+id/signInButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/default_color"
                android:padding="8dp"
                android:text="@string/continue_login"
                android:textAllCaps="false"
                android:textSize="32sp"
                app:shapeAppearance="@style/ButtonContainedCustomShape" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>