<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".user.RegisterFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <include layout="@layout/logo_image_view" />


            <Space
                android:layout_width="match_parent"
                android:layout_height="32dp" />


            <TextView
                android:id="@+id/signUpTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sign_up"
                android:textSize="40sp" />

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/orTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/or"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/orSignInButton"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    android:textAllCaps="false"
                    android:textColor="@color/default_color"
                    android:textSize="16sp" />

            </GridLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTextField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTextField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>


            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmPasswordTextField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>


            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/signUpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/default_color"
                android:padding="16dp"
                android:text="@string/continue_login"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:shapeAppearance="@style/ButtonContainedCustomShape" />


            <Space
                android:layout_width="match_parent"
                android:layout_height="32dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>