<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">


            <include layout="@layout/logo_image_view" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                android:id="@+id/welcomeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/welcome_message"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />


            <Button
                android:id="@+id/signInButtonWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/default_color"
                android:padding="16dp"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:shapeAppearance="@style/ButtonContainedCustomShape" />

            <Button
                android:id="@+id/signUpButtonWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/default_color"
                android:padding="16dp"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:shapeAppearance="@style/ButtonContainedCustomShape" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <include layout="@layout/material_card_view" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="32dp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>